# snake-game

./: Cargo.toml
data/: data.config.json  model.mpk
data/checkpoint/: model-9.mpk  optim-10.mpk  optim-9.mpk  scheduler-9.mpk
src/: app.rs  components.rs  constants.rs  data.rs  events.rs  inference.rs  main.rs  model.rs  resources.rs  training.rs
