[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
rand = "0.8.5"
burn = { version = "0.15.0", features = ["train", "wgpu", "vision"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
